--- a/BMD_design/xilinx_pcie_1_1_ep_s6_summary.html
+++ b/BMD_design/xilinx_pcie_1_1_ep_s6_summary.html
@@ -19,12 +19,13 @@
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc6slx45t-3csg324</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+No Errors</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 13.4</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/*.xmsgs?&DataKey=Warning'>276 Warnings (23 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -59,13 +60,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>1,009</TD>
+<TD ALIGN=RIGHT>979</TD>
 <TD ALIGN=RIGHT>54,576</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>1,009</TD>
+<TD ALIGN=RIGHT>979</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -89,19 +90,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>1,112</TD>
+<TD ALIGN=RIGHT>1,117</TD>
 <TD ALIGN=RIGHT>27,288</TD>
 <TD ALIGN=RIGHT>4%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>1,081</TD>
+<TD ALIGN=RIGHT>1,080</TD>
 <TD ALIGN=RIGHT>27,288</TD>
 <TD ALIGN=RIGHT>3%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>682</TD>
+<TD ALIGN=RIGHT>692</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -113,7 +114,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>269</TD>
+<TD ALIGN=RIGHT>258</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -131,13 +132,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>31</TD>
+<TD ALIGN=RIGHT>37</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>23</TD>
+<TD ALIGN=RIGHT>29</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -155,9 +156,9 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>409</TD>
+<TD ALIGN=RIGHT>411</TD>
 <TD ALIGN=RIGHT>6,822</TD>
-<TD ALIGN=RIGHT>5%</TD>
+<TD ALIGN=RIGHT>6%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Nummber of MUXCYs used</TD>
@@ -167,27 +168,27 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>1,403</TD>
+<TD ALIGN=RIGHT>1,377</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>511</TD>
-<TD ALIGN=RIGHT>1,403</TD>
-<TD ALIGN=RIGHT>36%</TD>
+<TD ALIGN=RIGHT>523</TD>
+<TD ALIGN=RIGHT>1,377</TD>
+<TD ALIGN=RIGHT>37%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>291</TD>
-<TD ALIGN=RIGHT>1,403</TD>
-<TD ALIGN=RIGHT>20%</TD>
+<TD ALIGN=RIGHT>260</TD>
+<TD ALIGN=RIGHT>1,377</TD>
+<TD ALIGN=RIGHT>18%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>601</TD>
-<TD ALIGN=RIGHT>1,403</TD>
-<TD ALIGN=RIGHT>42%</TD>
+<TD ALIGN=RIGHT>594</TD>
+<TD ALIGN=RIGHT>1,377</TD>
+<TD ALIGN=RIGHT>43%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
@@ -197,7 +198,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>71</TD>
+<TD ALIGN=RIGHT>69</TD>
 <TD ALIGN=RIGHT>54,576</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -407,7 +408,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.52</TD>
+<TD ALIGN=RIGHT>3.54</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -444,20 +445,20 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周二 三月 20 21:37:15 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/xst.xmsgs?&DataKey=Warning'>245 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/xst.xmsgs?&DataKey=Info'>43 Infos (1 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6.bld'>Translation Report</A></TD><TD>Current</TD><TD>周二 三月 20 21:37:22 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>8 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>5 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周二 三月 20 21:37:55 2018</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周二 三月 20 21:38:57 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周日 四月 8 19:21:26 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/xst.xmsgs?&DataKey=Warning'>268 Warnings (23 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/xst.xmsgs?&DataKey=Info'>46 Infos (4 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6.bld'>Translation Report</A></TD><TD>Current</TD><TD>周日 四月 8 19:21:33 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>8 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>5 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周日 四月 8 19:22:04 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/map.xmsgs?&DataKey=Info'>9 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周日 四月 8 19:22:52 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>周二 三月 20 21:39:05 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>周四 四月 5 10:57:23 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>周日 四月 8 19:23:00 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\xilinx_pcie_1_1_ep_s6.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>周日 四月 8 19:23:16 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 四月 5 10:57:24 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 四月 5 10:57:30 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>周日 四月 8 19:23:17 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/GitHub/AE-PCIE-DMA/BMD_design\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>周日 四月 8 19:23:21 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/05/2018 - 
+<br><center><b>Date Generated:</b> 04/11/2018 - 
